@@ -4,7 +4,10 @@ use strict;
 
 use Carp qw(croak);
 use Getopt::Long qw(:config no_ignore_case pass_through);
+use File::Copy;
 use File::Find;
+use File::Path qw(remove_tree);
+use File::Temp;
 use Module::Load;
 use Test::BrewBuild;
 
@@ -103,6 +106,13 @@ if (! grep { -x "$_/$brew_prog"} split /$sep/, $ENV{PATH}){
 
 $args{legacy} = defined $args{legacy} ? 1 : 0;
 
+# temp directory for error logs
+
+remove_tree 'bblog';
+my $dir = File::Temp->newdir;
+my $dir_name = $dir->dirname;
+$args{tempdir} = $dir_name;
+
 if ($args{revdep}){
 
     $log->_6('running --revdep');
@@ -153,6 +163,12 @@ else {
     $log->_7("default run");
     _exec_brew(%args);
 }
+
+# clean up the logs
+
+mkdir 'bblog';
+copy glob("$dir_name/*.bblog"), 'bblog';
+
 sub _exec_brew {
     my $brew = Test::BrewBuild->new(%args);
 
