@@ -15,6 +15,8 @@ Revision history for Test-BrewBuild
         - added --legacy|-L. Due to the fact ``cpanm'' requires 5.8.1, and we
           use it in the default exec plugin, we won't install versions lower
           than that, unless this flag is set
+        - FAIL logs are now stored in a temp directory, then moved to './bblog'
+          after completion, ensuring manifest.t tests don't fail (fixes #56)
 
 1.03_03 2016-03-29
         - --revdep, auto-testing of CPAN down-river modules working very well
